--- a/Checkbox/themes/ios/Checkbox.css
+++ b/Checkbox/themes/ios/Checkbox.css
@@ -1,5 +1,6 @@
 .d-checkbox {
   position: relative;
+  display: inline-block;
   margin-left: 3px;
   margin-right: 3px;
   margin-top: 10px;
@@ -13,7 +14,8 @@
 .d-checkbox::before {
   display: inline-block;
   text-align: center;
-  content: " ";
+  content: "\2714";
+  color: rgba(0, 0, 0, 0);
   border-color: #b0b0b0;
   border-style: solid;
   border-width: 1px;
@@ -27,7 +29,6 @@
   right: 0px;
 }
 .d-checkbox.d-checked::before {
-  content: "\2714";
   background-image: -webkit-gradient(linear, left top, left bottom, from(#7a9de9), to(#2362dd), color-stop(0.5, #366edf), color-stop(0.5, #215fdc));
   background-image: linear-gradient(to bottom, #7a9de9 0%, #366edf 50%, #215fdc 50%, #2362dd 100%);
   color: white;
