--- a/RadioButton/themes/RadioButton_template.less
+++ b/RadioButton/themes/RadioButton_template.less
@@ -1,5 +1,6 @@
 .d-radio-button {
 	position: relative;
+	display: inline-block;
 	.d-radio-button-styles();
 	&.d-focused { // from tab-focus()
 		.d-radio-button-focused();
@@ -7,11 +8,11 @@
 	&::before {		// like a <span> containing the black dot
 		display: inline-block;
 		text-align: center;
-		content: " ";
+		content: "\25CF";			// add the "black circle" character
+		color: rgba(0, 0, 0, 0);	// but make it invisible until d-checked is set
 		.d-radio-button-before-styles();
 	}
 	&.d-checked::before {
-		content: "\25CF";		// "black circle"
 		.d-radio-button-checked-before-styles();
 	}
 	&:active::before {
